--- a/00_load_data_county_level.ipynb
+++ b/00_load_data_county_level.ipynb
@@ -12,14 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading county level data...\n"
+      "loading county level data...\n",
+      "(3114, 7305)\n"
      ]
     }
    ],
