load daily and full data separately

--- a/00_load_data_county_level.ipynb
+++ b/00_load_data_county_level.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,21 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading county level data...\n",
-      "(3114, 7305)\n"
+      "(1212, 7306)\n"
      ]
     }
    ],
    "source": [
-    "from load_data import load_county_level\n",
-    "df = load_county_level()\n",
+    "import load_data\n",
+    "df = load_data.load_county_level()\n",
+    "df = df.sort_values(load_data.outcome_deaths, ascending=False)\n",
     "print(df.shape)"
    ]
   }
