--- a/04_prediction_time_series.ipynb
+++ b/04_prediction_time_series.ipynb
@@ -321,6 +321,7 @@
    "outputs": [],
    "source": [
     "df = load_data.load_county_level()\n",
+    "df = df.sort_values(load_data.outcome_deaths, ascending=False)\n",
     "outcome_cases = load_data.outcome_cases # most recent day\n",
     "outcome_deaths = load_data.outcome_deaths\n",
     "deaths_keys = [k for k in df.keys() if '#Deaths' in k]\n",
