add aligned pred plot

--- a/00_load_data_county_level.ipynb
+++ b/00_load_data_county_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "loading county level data...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/accounts/projects/vision/chandan/covid-19-geographic-risk-prediction/functions/merge_data.py:28: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support skipfooter; you can avoid this warning by specifying engine='python'.\n",
+      "  diabetes = pd.read_csv(diabetes, skiprows = 2, skipfooter = 1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ks Index(['countyFIPS', 'Respiratory Mortality'], dtype='object')\n",
+      "caching to data/df_county_level_cached.pkl\n",
       "(1212, 7306)\n"
      ]
     }
