add abridged csv

--- a/04_prediction_time_series.ipynb
+++ b/04_prediction_time_series.ipynb
@@ -49,23 +49,41 @@
     "deaths = df[deaths_keys].values\n",
     "cases = df[cases_keys].values\n",
     "df['deaths'] = [deaths[i] for i in range(deaths.shape[0])]\n",
-    "df['cases'] = [cases[i] for i in range(cases.shape[0])]"
+    "df['cases'] = [cases[i] for i in range(cases.shape[0])]\n",
+    "important_vars = load_data.important_keys(df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# potentially useful info"
+    "# aligned plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "important_vars = load_data.important_keys(df)"
+    "r = df[df[outcome_deaths] > 0]\n",
+    "plt.figure(dpi=200) #dpi=300)\n",
+    "R, C = 1, 2\n",
+    "for i in range(30):\n",
+    "    row = r.iloc[i]\n",
+    "    deaths = [x for x in row['deaths'] if x > 0]\n",
+    "    cases = [x for x in row['cases'] if x > 0]\n",
+    "    plt.subplot(R, C, 1)\n",
+    "    plt.plot(cases, alpha=0.5)\n",
+    "    plt.ylabel('# cases')\n",
+    "    plt.xlabel('days since first case')\n",
+    "    \n",
+    "    plt.subplot(R, C, 2)\n",
+    "    plt.plot(deaths, alpha=0.5)\n",
+    "    plt.ylabel('# deaths')\n",
+    "    plt.xlabel('days since first case')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -440,9 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -554,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
