simple case to death predictor

--- a/04_prediction_time_series.ipynb
+++ b/04_prediction_time_series.ipynb
@@ -882,7 +882,6 @@
     }
    ],
    "source": [
-    "\n",
     "for i in range(len(test_df)):\n",
     "    row = test_df.iloc[i]\n",
     "    if max(row['deaths'][:-1]) > 1:\n",
@@ -890,12 +889,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict deaths from cases"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print "
+    "def create_case_to_death_data(df):\n",
+    "    _cases = []\n",
+    "    _deaths = []\n",
+    "    _y_deaths = []\n",
+    "    for i in range(len(df)):\n",
+    "        row = df.iloc[i]\n",
+    "        deaths = row['deaths']\n",
+    "        cases = row['cases']\n",
+    "        for j in range(len(deaths)):\n",
+    "            if cases[j] > 0:\n",
+    "                _cases.append(cases[j])\n",
+    "                if j == 0:\n",
+    "                    _deaths.append(0)\n",
+    "                else:\n",
+    "                    _deaths.append(deaths[j-1])\n",
+    "\n",
+    "                _y_deaths.append(deaths[j])\n",
+    "    return (_cases,_deaths,_y_deaths)\n",
+    "\n",
+    "train_cases, train_deaths, train_y_deaths = create_case_to_death_data(train_df)\n",
+    "test_cases, test_deaths, test_y_deaths = create_case_to_death_data(test_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nick/anaconda2/envs/covid/lib/python3.6/site-packages/sklearn/model_selection/_search.py:281: UserWarning:\n",
+      "\n",
+      "The total space of parameters 5 is smaller than n_iter=20. Running 5 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=None, error_score=nan,\n",
+       "                   estimator=RandomForestRegressor(bootstrap=True,\n",
+       "                                                   ccp_alpha=0.0,\n",
+       "                                                   criterion='mse',\n",
+       "                                                   max_depth=None,\n",
+       "                                                   max_features='auto',\n",
+       "                                                   max_leaf_nodes=None,\n",
+       "                                                   max_samples=None,\n",
+       "                                                   min_impurity_decrease=0.0,\n",
+       "                                                   min_impurity_split=None,\n",
+       "                                                   min_samples_leaf=1,\n",
+       "                                                   min_samples_split=2,\n",
+       "                                                   min_weight_fraction_leaf=0.0,\n",
+       "                                                   n_estimators=100,\n",
+       "                                                   n_jobs=None, oob_score=False,\n",
+       "                                                   random_state=None, verbose=0,\n",
+       "                                                   warm_start=False),\n",
+       "                   iid='deprecated', n_iter=20, n_jobs=8,\n",
+       "                   param_distributions={'n_estimators': [50, 100, 200, 400,\n",
+       "                                                         1000]},\n",
+       "                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
+       "                   return_train_score=False, scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 363,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RandomForestRegressor()\n",
+    "param_dist ={\n",
+    "    'n_estimators': [50,100,200,400,1000]\n",
+    "}\n",
+    "\n",
+    "metric = sklearn.metrics.mean_squared_error\n",
+    "# n_jobs = number of cores to parallelize across\n",
+    "deaths_random_search = RandomizedSearchCV(model, param_distributions=param_dist,\n",
+    "                                   n_iter=n_iter,n_jobs = 8)\n",
+    "\n",
+    "deaths_random_search.fit(list(zip(train_cases,train_deaths)),train_y_deaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_deaths = deaths_random_search.predict(list(zip(test_cases,test_deaths)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04686110315167603"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric(pred_deaths,test_y_deaths)"
    ]
   },
   {
