--- a/02_eda_hospital_level.ipynb
+++ b/02_eda_hospital_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,11 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "  %reload_ext autoreload\n",
+      "# unmatched hospitals: 598\n",
+      "# matched hospitals: 6545\n",
+      "# academic matched hospitals: 1215\n",
+      "# academic matched hospitals w/ ICU beds: 1087\n"
      ]
     }
    ],
@@ -25,11 +29,19 @@
     "import math\n",
     "import load_data\n",
     "\n",
-    "outcomes = [load_data.outcome_cases, load_data.outcome_deaths]\n",
+    "outcomes = ['new_cases_yesterday', 'new_deaths_yesterday']\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
     "df_county = df_county.sort_values(load_data.outcome_deaths, ascending=False)\n",
-    "df = df_hospital.merge(df_county, how='left', on='countyFIPS')"
+    "df = df_hospital.merge(df_county, how='left', on='countyFIPS')\n",
+    "\n",
+    "# note this many hospitals couldn't be matched to a county - we don't know how to include them!\n",
+    "print('# unmatched hospitals:', df['countyFIPS'].isna().sum())\n",
+    "print('# matched hospitals:', (~df['countyFIPS'].isna()).sum())\n",
+    "print('# academic matched hospitals:', (~df['countyFIPS'].isna() & df['IsAcademicHospital']).sum())\n",
+    "print('# academic matched hospitals w/ ICU beds:', (~df['countyFIPS'].isna() & \n",
+    "                                                    df['IsAcademicHospital'] &\n",
+    "                                                    df['ICU Beds'] > 0).sum())"
    ]
   },
   {
@@ -43,54 +55,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# unmatched hospitals: 598\n",
-      "# matched hospitals: 6545\n",
-      "# academic matched hospitals: 1215\n",
-      "# academic matched hospitals w/ ICU beds: 1087\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/accounts/projects/vision/.local/lib/python3.7/site-packages/pandas/core/frame.py:3391: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self[k1] = value[k2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# note this many hospitals couldn't be matched to a county - we don't know how to include them!\n",
-    "print('# unmatched hospitals:', df['countyFIPS'].isna().sum())\n",
-    "print('# matched hospitals:', (~df['countyFIPS'].isna()).sum())\n",
-    "print('# academic matched hospitals:', (~df['countyFIPS'].isna() & df['IsAcademicHospital']).sum())\n",
-    "print('# academic matched hospitals w/ ICU beds:', (~df['countyFIPS'].isna() & \n",
-    "                                                    df['IsAcademicHospital'] &\n",
-    "                                                    df['ICU Beds'] > 0).sum())\n",
+    "# rename keys\n",
+    "remap = {\n",
+    "    \n",
+    "}\n",
+    "df = df\n",
     "\n",
     "# filter hospitals\n",
     "df = df[~df['countyFIPS'].isna() & df['IsAcademicHospital'] & df['ICU Beds'] > 0]\n",
     "df = df.sort_values(by=[load_data.outcome_deaths, 'ICU Beds'], ascending=False)\n",
     "df = df.rename(columns={'#ICU_beds': '#ICU_beds_county_level'})\n",
-    "df['Frac_ICU_Beds_of_county'] = df['#ICU_beds_county_level'] / df['ICU Beds']\n",
+    "df['Frac_ICU_Beds_of_county'] = df['ICU Beds'] / df['#ICU_beds_county_level']\n",
     "\n",
-    "\n",
+    "# get predicted #deaths\n",
+    "df['VentDemand'] = df['new_deaths_yesterday'] * 2 * df['Frac_ICU_Beds_of_county']\n",
+    "df['VentSupply'] = df['ICU Beds']\n",
+    "df['VentNeeded'] = df['VentDemand'] - df['VentSupply']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# make smaller df\n",
-    "hospital_keys = ['County Name_x', 'Facility Name_x', 'City_x', \n",
-    "                 '#ICU_beds_county_level', 'Frac_ICU_Beds_of_county',\n",
-    "                 'ICU Beds', 'Total Beds', 'Total Employees', \n",
-    "                 'Hospital Type', 'Mortality national comparison',  \n",
-    "                 'Website', 'Urban or Rural Designation', 'Phone Number'] + ['countyFIPS']\n",
+    "vent_keys = ['VentNeeded', 'VentDemand', 'VentSupply']\n",
+    "county_info_keys = ['County Name_x', '#ICU_beds_county_level']\n",
+    "county_meta_keys = ['City_x', 'countyFIPS']\n",
+    "hospital_keys = ['Facility Name_x', 'ICU Beds', 'Total Beds', 'Total Employees', \n",
+    "                 'Hospital Type', 'Mortality national comparison',\n",
+    "                 'Website', 'Urban or Rural Designation', 'Phone Number']\n",
+    "hospital_meta_keys = ['Frac_ICU_Beds_of_county', 'TIN']\n",
     "d = df[outcomes + hospital_keys]\n",
     "d[outcomes] = d[outcomes].fillna(0)"
    ]
@@ -238,6 +238,16 @@
     "#open the google spreadsheet (where 'PY to Gsheet Test' is the name of my sheet)\n",
     "sheet_name = 'hospitals_full'\n",
     "sh = gc.open(sheet_name) # name of the hospital\n",
+    "\n",
+    "#select the first sheet \n",
+    "wks = sh[0]\n",
+    "\n",
+    "#update the first sheet with df, starting at cell B2. \n",
+    "wks.set_dataframe(d,(1,1))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "#select the first sheet \n",
     "wks = sh[0]\n",
