output different google sheets

--- a/02_eda_hospital_level.ipynb
+++ b/02_eda_hospital_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -27,14 +27,18 @@
     "import matplotlib.pyplot as plt\n",
     "from os.path import join as oj\n",
     "import math\n",
+    "import pygsheets\n",
+    "import pandas as pd\n",
     "import load_data\n",
+    "sys.path.append('modeling')\n",
+    "import exponential_modeling\n",
     "\n",
     "outcomes = ['new_cases_yesterday', 'new_deaths_yesterday']\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
     "df_county = df_county.sort_values(load_data.outcome_deaths, ascending=False)\n",
     "df = df_hospital.merge(df_county, how='left', on='countyFIPS')\n",
-    "\n",
+    "df[outcomes] = df[outcomes].fillna(0)\n",
     "# note this many hospitals couldn't be matched to a county - we don't know how to include them!\n",
     "print('# unmatched hospitals:', df['countyFIPS'].isna().sum())\n",
     "print('# matched hospitals:', (~df['countyFIPS'].isna()).sum())\n",
@@ -55,44 +59,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# rename keys\n",
     "remap = {\n",
-    "    \n",
+    "    '#ICU_beds': 'ICU Beds in County',\n",
+    "    'County Name_x': 'County Name',\n",
+    "    'Facility Name_x': 'Facility Name',\n",
+    "    'new_deaths_yesterday': 'New Deaths',\n",
+    "    'new_cases_yesterday': 'New Cases',\n",
     "}\n",
-    "df = df\n",
+    "df = df.rename(columns=remap)\n",
     "\n",
     "# filter hospitals\n",
     "df = df[~df['countyFIPS'].isna() & df['IsAcademicHospital'] & df['ICU Beds'] > 0]\n",
     "df = df.sort_values(by=[load_data.outcome_deaths, 'ICU Beds'], ascending=False)\n",
-    "df = df.rename(columns={'#ICU_beds': '#ICU_beds_county_level'})\n",
-    "df['Frac_ICU_Beds_of_county'] = df['ICU Beds'] / df['#ICU_beds_county_level']\n",
+    "# df = df.rename(columns={'#ICU_beds': '#ICU_beds_county_level'})\n",
+    "df['Frac ICU Beds of County'] = df['ICU Beds'] / df['ICU Beds in County']\n",
     "\n",
     "# get predicted #deaths\n",
-    "df['VentDemand'] = df['new_deaths_yesterday'] * 2 * df['Frac_ICU_Beds_of_county']\n",
-    "df['VentSupply'] = df['ICU Beds']\n",
-    "df['VentNeeded'] = df['VentDemand'] - df['VentSupply']"
+    "# df = exponential_modeling.estimate_deaths(df)\n",
+    "df['Vent Demand'] = df['New Deaths'] * 5 * df['Frac ICU Beds of County']\n",
+    "df['Vent Supply'] = df['ICU Beds']\n",
+    "df['Vent Needed'] = df['Vent Demand'] - df['Vent Supply']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make smaller df\n",
-    "vent_keys = ['VentNeeded', 'VentDemand', 'VentSupply']\n",
-    "county_info_keys = ['County Name_x', '#ICU_beds_county_level']\n",
-    "county_meta_keys = ['City_x', 'countyFIPS']\n",
-    "hospital_keys = ['Facility Name_x', 'ICU Beds', 'Total Beds', 'Total Employees', \n",
-    "                 'Hospital Type', 'Mortality national comparison',\n",
-    "                 'Website', 'Urban or Rural Designation', 'Phone Number']\n",
-    "hospital_meta_keys = ['Frac_ICU_Beds_of_county', 'TIN']\n",
-    "d = df[outcomes + hospital_keys]\n",
-    "d[outcomes] = d[outcomes].fillna(0)"
+    "outcome_keys = ['New Cases', 'New Deaths']\n",
+    "vent_keys = ['Vent Needed', 'Vent Demand', 'Vent Supply']\n",
+    "county_info_keys = ['County Name']\n",
+    "county_meta_keys = ['ICU Beds in County', 'City', 'countyFIPS']\n",
+    "hospital_keys = ['Facility Name']\n",
+    "hospital_contact_keys = ['Website',  'Phone Number']\n",
+    "hospital_meta_keys = ['ICU Beds', 'Total Beds', 'Total Employees', 'Hospital Type',\n",
+    "                      'Frac ICU Beds of County', 'Mortality national comparison', \n",
+    "                      'TIN', 'Urban or Rural Designation']\n",
+    "\n",
+    "# d contains all these keys\n",
+    "d = df[outcome_keys + vent_keys + county_info_keys + county_meta_keys + \\\n",
+    "       hospital_keys + hospital_contact_keys + hospital_meta_keys]\n",
+    "\n",
+    "# things to output\n",
+    "d_vent = d[vent_keys + hospital_keys + county_info_keys]\n",
+    "contact_df_keys = hospital_keys + county_info_keys + county_meta_keys + hospital_contact_keys\n",
+    "d_contact = d[contact_df_keys]\n",
+    "d_full = d"
    ]
   },
   {
@@ -108,7 +127,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.head(30)"
+    "# d.groupby('countyFIPS').head(1).head(8) # look at top counties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# export to google sheets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- requires a creds.json file in the root directory\n",
+    "- need to make a sheet and share it with `chandan@r4l-predictions.iam.gserviceaccount.com`\n",
+    "- full hospitals spreadsheet: https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc = pygsheets.authorize(service_file='creds.json')\n",
+    "\n",
+    "#open the google spreadsheet (where 'PY to Gsheet Test' is the name of my sheet)\n",
+    "sheet_name = 'Ventilator Demand Prediction'\n",
+    "sh = gc.open(sheet_name) # name of the hospital\n",
+    "\n",
+    "wks = sh[0] #select a sheet \n",
+    "wks.set_dataframe(d_vent, (1,1)) #update the first sheet with df, starting at cell B2. \n",
+    "\n",
+    "wks = sh[1]\n",
+    "wks.set_dataframe(d_contact,(1,1))\n",
+    "\n",
+    "wks = sh[2]\n",
+    "wks.set_dataframe(d_full,(1,1))"
    ]
   },
   {
@@ -130,11 +187,11 @@
     "\n",
     "\n",
     "plt.subplot(R, C, 1)\n",
-    "c = 'County Name_x'\n",
+    "c = 'County Name'\n",
     "county_names = d[c].unique()[:NUM_COUNTIES]\n",
     "num_academic_hospitals = []\n",
-    "d = df[outcomes + hospital_keys]\n",
-    "d = d.sort_values(load_data.outcome_deaths, ascending=False)\n",
+    "# d = df[outcome_keys + hospital_keys]\n",
+    "# d = d.sort_values('New Deaths', ascending=False)\n",
     "for county in county_names:\n",
     "    num_academic_hospitals.append(d[d[c] == county].shape[0])\n",
     "plt.barh(county_names[::-1], num_academic_hospitals[::-1]) # reverse to plot top down\n",
@@ -194,66 +251,12 @@
     "    plt.subplot(R, C, i + 1)\n",
     "    cn = county_names[i]\n",
     "    dc = d[d[c] == cn]\n",
-    "    plt.barh(dc['Facility Name_x'], dc['ICU Beds'])\n",
+    "    plt.barh(dc['Facility Name'][::-1], dc['ICU Beds'][::-1])\n",
     "    plt.title(cn)\n",
     "    plt.xlabel('# ICU Beds')\n",
     "plt.tight_layout()\n",
     "# plt.subplots_adjust(bottom=1)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# export to google sheets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- requires a creds.json file in the root directory\n",
-    "- need to make a sheet and share it with `chandan@r4l-predictions.iam.gserviceaccount.com`\n",
-    "- full hospitals spreadsheet: https://docs.google.com/spreadsheets/d/1ZLev2pRIPXvP-qNnvAtO53-bCrAGTAhB_w0w7bZKAWw/edit#gid=0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pygsheets\n",
-    "import pandas as pd\n",
-    "gc = pygsheets.authorize(service_file='creds.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#open the google spreadsheet (where 'PY to Gsheet Test' is the name of my sheet)\n",
-    "sheet_name = 'hospitals_full'\n",
-    "sh = gc.open(sheet_name) # name of the hospital\n",
-    "\n",
-    "#select the first sheet \n",
-    "wks = sh[0]\n",
-    "\n",
-    "#update the first sheet with df, starting at cell B2. \n",
-    "wks.set_dataframe(d,(1,1))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#select the first sheet \n",
-    "wks = sh[0]\n",
-    "\n",
-    "#update the first sheet with df, starting at cell B2. \n",
-    "wks.set_dataframe(d,(1,1))"
    ]
   },
   {
