covid data is cumulative

--- a/02_eda_hospital_level.ipynb
+++ b/02_eda_hospital_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -33,10 +33,11 @@
     "sys.path.append('modeling')\n",
     "import exponential_modeling\n",
     "\n",
-    "outcomes = ['new_cases_yesterday', 'new_deaths_yesterday']\n",
+    "outcomes = ['tot_cases', 'tot_deaths']\n",
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
     "df_county = df_county.sort_values(load_data.outcome_deaths, ascending=False)\n",
+    "df_county = exponential_modeling.estimate_deaths(df_county) # adds key \n",
     "df = df_hospital.merge(df_county, how='left', on='countyFIPS')\n",
     "df[outcomes] = df[outcomes].fillna(0)\n",
     "# note this many hospitals couldn't be matched to a county - we don't know how to include them!\n",
@@ -54,12 +55,14 @@
    "source": [
     "- we filter by academic hospitals since they seem to have enough personnel to deal with extra ventilators\n",
     "- we also filter to only include hospitals w/ ICU beds\n",
-    "- unfortunately we don't look into FQHCs, as they may not be the place to receive urgent ventilator care"
+    "- unfortunately we don't look into FQHCs, as they may not be the place to receive urgent ventilator care\n",
+    "- might want to up-weight larger hospitals, as they might have more capacity\n",
+    "- 10-20% ventilators will be used for other stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +83,6 @@
     "df['Frac ICU Beds of County'] = df['ICU Beds'] / df['ICU Beds in County']\n",
     "\n",
     "# get predicted #deaths\n",
-    "# df = exponential_modeling.estimate_deaths(df)\n",
     "df['Vent Demand'] = df['New Deaths'] * 5 * df['Frac ICU Beds of County']\n",
     "df['Vent Supply'] = df['ICU Beds']\n",
     "df['Vent Needed'] = df['Vent Demand'] - df['Vent Supply']\n",
@@ -89,21 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"str\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-4a881a12267a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# things to output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0md_vent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvent_keys\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mhospital_keys\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcounty_info_keys\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mcontact_df_keys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhospital_keys\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcounty_info_keys\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcounty_meta_keys\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'TIN'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mhospital_contact_keys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0md_contact\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcontact_df_keys\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0md_full\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"str\") to list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# make smaller df\n",
     "outcome_keys = ['New Cases', 'New Deaths']\n",
@@ -136,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +164,8 @@
     "wks = sh[0] #select a sheet\n",
     "wks.set_dataframe(d_vent, (1,1)) #update the first sheet with df, starting at cell B2. \n",
     "\n",
+    "\n",
+    "# note - do not override the last column here\n",
     "wks = sh[1]\n",
     "wks.set_dataframe(d_contact,(1,1))\n",
     "\n",
