--- a/03_prediction_static.ipynb
+++ b/03_prediction_static.ipynb
@@ -62,8 +62,8 @@
    ],
    "source": [
     "df = load_data.load_county_level()\n",
-    "outcome_cases = load_data.outcome_cases\n",
-    "outcome_deaths = load_data.outcome_deaths\n",
+    "outcome_cases = 'tot_cases'\n",
+    "outcome_deaths = 'tot_deaths'\n",
     "df, df_test = load_data.split_data(df)"
    ]
   },
