--- a/04_prediction_time_series.ipynb
+++ b/04_prediction_time_series.ipynb
@@ -44,8 +44,8 @@
     "# 'deaths' and 'cases' contain the time-series of the outbreak\n",
     "df = load_data.load_county_level()\n",
     "df = df.sort_values(load_data.outcome_deaths, ascending=False)\n",
-    "outcome_cases = load_data.outcome_cases # most recent day\n",
-    "outcome_deaths = load_data.outcome_deaths\n",
+    "outcome_cases = 'tot_cases'\n",
+    "outcome_deaths = 'tot_deaths'\n",
     "important_vars = load_data.important_keys(df)"
    ]
   },
@@ -1034,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
