Added some error checking

--- a/scraping/Scraping County Phone Numbers.ipynb
+++ b/scraping/Scraping County Phone Numbers.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sites)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +97,13 @@
     "cnt = 0\n",
     "for s in range(0, len(sites)):\n",
     "    soup = BeautifulSoup(sites[s], \"html.parser\")\n",
+    "    if soup == None:\n",
+    "        continue\n",
     "    state = states[s]\n",
     "    # Find all the data\n",
     "    for td in soup.table.find_all(\"td\"):\n",
+    "        if td == None:\n",
+    "            continue\n",
     "        if \"health\" in td.text.lower():\n",
     "            # if cnt == 1, means last one didn't have a phone number, so pop it\n",
     "            if cnt == 1:\n",
@@ -95,6 +119,8 @@
     "            # Update the data with corresponding phone number\n",
     "            # Updates only if previous update was \n",
     "            if cnt == 1:\n",
+    "                if td.a == None:\n",
+    "                    continue\n",
     "                num = td.a.get(\"href\")\n",
     "                data[\"phone_number\"].append(num[5:])\n",
     "                cnt = 0\n",
@@ -106,11 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(data).to_csv(\"../data/AL_to_KS_numbers.csv\")"
+    "pd.DataFrame(data).to_csv(\"../data/all_state_numbers.csv\")"
    ]
   }
  ],
