--- a/02_eda_hospital_level.ipynb
+++ b/02_eda_hospital_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,6 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "1\n",
-      "3\n",
-      "5\n",
       "# unmatched hospitals: 598\n",
       "# matched hospitals: 6545\n",
       "# academic matched hospitals: 1215\n",
@@ -31,6 +28,7 @@
     "from os.path import join as oj\n",
     "import math\n",
     "import pygsheets\n",
+    "import pickle as pkl\n",
     "import pandas as pd\n",
     "import load_data\n",
     "sys.path.append('modeling')\n",
@@ -40,12 +38,13 @@
     "df_hospital = load_data.load_hospital_level()\n",
     "df_county = load_data.load_county_level()\n",
     "df_county = df_county.sort_values(load_data.outcome_deaths, ascending=False)\n",
+    "NUM_DAYS_LIST = [1, 3, 5]\n",
     "# df_county = exponential_modeling.estimate_deaths(df_county) # adds key \n",
-    "for num_days_in_future in [1, 3, 5]: # 1 is tomorrow\n",
+    "for num_days_in_future in NUM_DAYS_LIST: # 1 is tomorrow\n",
     "    df_county = exponential_modeling.estimate_deaths(df_county, \n",
     "                                                     method='exponential',\n",
     "                                                     target_day=[num_days_in_future],\n",
-    "                                                     output_key=f'pred_deaths_exp_{num_days_in_future}') # adds key \n",
+    "                                                     output_key=f'Predicted Deaths {num_days_in_future}-day') # adds key \n",
     "df = df_hospital.merge(df_county, how='left', on='countyFIPS')\n",
     "df[outcomes] = df[outcomes].fillna(0)\n",
     "# note this many hospitals couldn't be matched to a county - we don't know how to include them!\n",
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,22 +90,27 @@
     "df['Frac ICU Beds of County'] = df['ICU Beds'] / df['ICU Beds in County']\n",
     "\n",
     "# get predicted #deaths\n",
-    "df['Vent Demand'] = (df['Tot Deaths'] * 5 * df['Frac ICU Beds of County']).fillna(0)\n",
-    "df['Vent Supply'] = df['ICU Beds'].fillna(0)\n",
-    "df['Vent Needed'] = df['Vent Demand'] - df['Vent Supply']\n",
-    "df['Vent Needed'] = df['Vent Needed'].apply(lambda x: max(0, x)).astype(int)\n",
+    "for n in NUM_DAYS_LIST:\n",
+    "    df[f'Vent Demand {n}-day'] = (df['Tot Deaths'] * 5 * df['Frac ICU Beds of County']).fillna(0)\n",
+    "    df[f'Vent Supply {n}-day'] = df['ICU Beds'].fillna(0)\n",
+    "    df[f'Vent Needed {n}-day'] = df[f'Vent Demand {n}-day'] - df[f'Vent Supply {n}-day']\n",
+    "    df[f'Vent Needed {n}-day'] = df[f'Vent Needed {n}-day'].apply(lambda x: max(0, x)).astype(int)\n",
     "df['Num Shipped'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make smaller df\n",
     "outcome_keys = ['Tot Cases', 'Tot Deaths']\n",
-    "vent_keys = ['Vent Needed', 'Vent Demand', 'Vent Supply']\n",
+    "vent_keys = []\n",
+    "for n in NUM_DAYS_LIST:\n",
+    "    for k in ['Vent Needed', 'Vent Demand', 'Vent Supply']:\n",
+    "        vent_keys.append(k + f' {n}-day')\n",
+    "\n",
     "county_info_keys = ['County Name']\n",
     "county_meta_keys = ['ICU Beds in County', 'City']\n",
     "hospital_keys = ['Facility Name']\n",
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
